sfSandBoxCode/force-app/main/default/objects/Work_Order_Item__c/fields/Actual_Material_Cost__c.field-meta.xml
<CustomField>
    <fullName>Actual_Material_Cost__c</fullName>
    <label>Actual Material Cost</label>
    <summarizedField>Work_Order_Item_Issue__c.Issued_Value__c</summarizedField>
    <summaryForeignKey>Work_Order_Item_Issue__c.Work_Order_Item__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>