sfSandBoxCode/force-app/main/default/objects/Work_Order_Item__c/fields/BOM_Name__c.field-meta.xml
<CustomField>
    <fullName>BOM_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BOM Name</label>
    <referenceTo>Inventory_Item_BOM__c</referenceTo>
    <relationshipLabel>Work Order Items</relationshipLabel>
    <relationshipName>Work_Order_Items</relationshipName>
    <type>Lookup</type>
</CustomField>