sfSandBoxCode/force-app/main/default/objects/Work_Order_Item__c/fields/BOM_Quantity__c.field-meta.xml
<CustomField>
    <fullName>BOM_Quantity__c</fullName>
    <label>BOM Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>