sfSandBoxCode/force-app/main/default/objects/Work_Order_Item__c/fields/Completed_Issuance__c.field-meta.xml
<CustomField>
    <fullName>Completed_Issuance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Have you completed issuances for this item ?</description>
    <inlineHelpText>Have you completed issuances for this item ?</inlineHelpText>
    <label>Completed Issuance ?</label>
    <type>Checkbox</type>
</CustomField>