sfSandBoxCode/force-app/main/default/objects/Work_Order_Item__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Currency</label>
    <referenceTo>Currency_Config__c</referenceTo>
    <relationshipLabel>Work Order Items</relationshipLabel>
    <relationshipName>Work_Order_Items</relationshipName>
    <type>Lookup</type>
</CustomField>