sfSandBoxCode/force-app/main/default/objects/Work_Order_Item__c/fields/Inventory_Item__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory Item</label>
    <referenceTo>Inventory_Item__c</referenceTo>
    <relationshipLabel>Work Order Items</relationshipLabel>
    <relationshipName>Work_Order_Items</relationshipName>
    <type>Lookup</type>
</CustomField>