sfSandBoxCode/force-app/main/default/objects/Work_Order_Item__c/fields/Inventory_Item_Location__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Item_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory Item Location</label>
    <referenceTo>Inventory_Item_Location__c</referenceTo>
    <relationshipLabel>Work Order Items</relationshipLabel>
    <relationshipName>Work_Order_Items</relationshipName>
    <type>Lookup</type>
</CustomField>