sfSandBoxCode/force-app/main/default/objects/Work_Order_Item__c/fields/Inventory_UoM__c.field-meta.xml
<CustomField>
    <fullName>Inventory_UoM__c</fullName>
    <formula>Inventory_Item__r.Inventory_UoM__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inventory UoM</label>
    <type>Text</type>
</CustomField>