sfSandBoxCode/force-app/main/default/objects/Work_Order_Item__c/fields/Issued_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Issued_Quantity__c</fullName>
    <label>Issued Quantity</label>
    <summarizedField>Work_Order_Item_Issue__c.Issued_Quantity__c</summarizedField>
    <summaryForeignKey>Work_Order_Item_Issue__c.Work_Order_Item__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>