sfSandBoxCode/force-app/main/default/objects/Work_Order_Item__c/fields/Lot__c.field-meta.xml
<CustomField>
    <fullName>Lot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lot</label>
    <referenceTo>Item_Location_Lot__c</referenceTo>
    <relationshipLabel>Work Order Items</relationshipLabel>
    <relationshipName>Work_Order_Items</relationshipName>
    <type>Lookup</type>
</CustomField>