sfSandBoxCode/force-app/main/default/objects/Work_Order_Item__c/fields/Pending_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Pending_Quantity__c</fullName>
    <formula>BOM_Quantity__c  -  Issued_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pending Quantity</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>