sfSandBoxCode/force-app/main/default/objects/Work_Order_Item__c/fields/Percentage_Variance__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Variance__c</fullName>
    <formula>Pending_Quantity__c  /  BOM_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percentage Variance(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>