sfSandBoxCode/force-app/main/default/objects/Work_Order_Item__c/fields/Planned_Material_Cost__c.field-meta.xml
<CustomField>
    <fullName>Planned_Material_Cost__c</fullName>
    <label>Planned Quantity</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>